# axiom-kwenta-incentives

./: .env.example  README.md  foundry.toml  package.json  pnpm-lock.yaml
.github/workflows/: test.yml
app/axiom/: claim.circuit.ts
app/axiom/data/: input.py  inputs.json
app/kwenta-circuit/: Cargo.toml
app/kwenta-circuit/src/: claim.rs  lib.rs
circuit/: Cargo.toml
circuit/src/: claim.rs  lib.rs
circuit/src/test/: mod.rs  sanity.rs  utils.rs
src/: AxiomKwentaIncentives.sol
test/: AxiomKwentaIncentives.t.sol
