[package]
name = "axiom-kwenta-incentives-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axiom-circuit = { git = "https://github.com/axiom-crypto/axiom-sdk-rs.git", branch = "staging" }
axiom-sdk = { git = "https://github.com/axiom-crypto/axiom-sdk-rs.git", branch = "staging" }
lazy_static = "1.4.0"
serde = "1.0.198"
